[package]
name = "emoji-smuggler"
version = "0.1.0"
edition = "2024"
authors = ["Gregory Kennedy"]
description = "Emoji-based data smuggling demonstration for security education"

[lib]
# cdylib for WASM compilation, rlib for testing compatibility
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "emoji-smuggler"
path = "src/main.rs"

[dependencies]
# Latest wasm-bindgen for WASM-JS interop (0.2.104 as of Nov 2025)
wasm-bindgen = "0.2"

# Better panic messages in WASM
console_error_panic_hook = "0.1"

# Latest serde for serialization (1.0.228 as of Nov 2025)
serde = { version = "1.0", features = ["derive"] }

# Native serde integration with wasm-bindgen (0.6.5 as of Nov 2025)
serde-wasm-bindgen = "0.6"

[dev-dependencies]
# WASM testing support
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small WASM size
opt-level = "s"
lto = true
